--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Developer Tips</title>
 
+    <link rel="shortcut icon" href="https://img.icons8.com/bubbles/50/000000/rocket.png">
     <link rel="stylesheet" href="libs/animate.css">
     <link rel="stylesheet" href="libs/fancybox.min.css">
     <link rel="stylesheet" href="libs/datepicker.min.css">
