--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
 
                     <span class="text">
-                        Developer Tips
+                        Developer Tip
                     </span>
                 </a>
             </div>
