--- a/page1.html
+++ b/page1.html
@@ -26,7 +26,12 @@
 
             <div class="table-section">
                 <div class="left">
-                    <div class="row row1"></div>
+                    <div class="row row1">
+                        <div class="nav-box">
+                            <div class="swiper-button-prev prev-table"></div>
+                            <div class="swiper-button-next next-table"></div>
+                        </div>
+                    </div>
                     <div class="row row2">1 кг</div>
                     <div class="row row3">2 кг</div>
                     <div class="row row4">3 кг</div>
@@ -120,15 +125,12 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="swiper-button-prev prev-table"></div>
-                        <div class="swiper-button-next next-table"></div>
                     </div>
                 </div>
             </div>
 
+                                            
 
-            
 
         </div>
     </div>
