--- a/page1.html
+++ b/page1.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="libs/swiper.min.css">
     <link rel="stylesheet" href="libs/fancybox.min.css">
+    <link rel="stylesheet" href="libs/nouislider.min.css">
     <link rel="stylesheet" href="libs/nice-select.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -24,113 +25,6 @@
         <div class="container">
 
 
-            <div class="table-section">
-                <div class="left">
-                    <div class="row row1">
-                        <div class="nav-box">
-                            <div class="swiper-button-prev prev-table"></div>
-                            <div class="swiper-button-next next-table"></div>
-                        </div>
-                    </div>
-                    <div class="row row2">1 кг</div>
-                    <div class="row row3">2 кг</div>
-                    <div class="row row4">3 кг</div>
-                    <div class="row row5">4 кг</div>
-                </div>
-
-                <div class="right">
-                    <div class="swiper-container swiper-table">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <div class="row row1">
-                                    Lavazza Crema Aroma
-                                </div>
-
-                                <div class="row row2">
-                                    2 800 р.
-                                </div>
-
-                                <div class="row row3">
-                                    4 000 р.
-                                </div>
-
-                                <div class="row row4">
-                                    4 000 р.
-                                </div>
-                                <div class="row row5">
-                                    4 000 р.
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <div class="row row1">
-                                    Lavazza Crema Aroma
-                                </div>
-
-                                <div class="row row2">
-                                    2 800 р.
-                                </div>
-
-                                <div class="row row3">
-                                    4 000 р.
-                                </div>
-
-                                <div class="row row4">
-                                    4 000 р.
-                                </div>
-                                <div class="row row5">
-                                    4 000 р.
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <div class="row row1">
-                                    Lavazza Crema Aroma
-                                </div>
-
-                                <div class="row row2">
-                                    2 800 р.
-                                </div>
-
-                                <div class="row row3">
-                                    4 000 р.
-                                </div>
-
-                                <div class="row row4">
-                                    4 000 р.
-                                </div>
-                                <div class="row row5">
-                                    4 000 р.
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <div class="row row1">
-                                    Lavazza Crema Aroma
-                                </div>
-
-                                <div class="row row2">
-                                    2 800 р.
-                                </div>
-
-                                <div class="row row3">
-                                    4 000 р.
-                                </div>
-
-                                <div class="row row4">
-                                    4 000 р.
-                                </div>
-                                <div class="row row5">
-                                    4 000 р.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-                                            
-
 
         </div>
     </div>
@@ -143,6 +37,7 @@
     <script src="libs/fancybox.min.js"></script>
     <script src="libs/nice-select.min.js"></script>
     <script src="libs/matchHeight-min.js"></script>
+    <script src="libs/nouislider.min.js"></script>
     <script src="script.js"></script>
 </body>
 
